fix mob spacing 4

--- a/taipei.css
+++ b/taipei.css
@@ -66,14 +66,10 @@ h4 {
     font-size: 2rem;
     font-weight: 400;
     margin: 0;
-    /* padding: 0; */
     padding-bottom: 6rem;
     color: var(--main-color);
     letter-spacing: 0.3rem;
-    /* margin: 30vh auto;
-    padding: 2rem 0; */
     text-transform: uppercase;
-    /* align-self: end; */
     text-align: center;
 }
 
@@ -101,6 +97,10 @@ p {
     padding-bottom: 2rem;
 }
 
+.icon {
+ width: 25px;
+ height: 25px;
+}
 
 ul,
 li {
@@ -236,7 +236,13 @@ svg:hover {
 
     .byline {
         font-size: 0.8rem;
-        padding: 0px 30px 40px 30px;
+        padding: 0px 10px 40px 10px;
+        width: 300px;
+        margin: auto;
+        /* left: 50%;
+        margin-right: -50%; */
+
+        /* margin: auto 0; */
         /* margin: auto 0;
         padding-top: 10vh;
         width: 100%;
@@ -251,10 +257,16 @@ svg:hover {
     .h1 {
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 8rem;
     }
 
     #mapid { 
         margin-top: 10px;
+    }
+
+   .icon {
+  width: 20px;
+  height: 20px;
     }
 }
 
